# enhanced-dash-mcp

./: .flake8  .gitignore  AGENTS.md  AUTOMATION_TEST_RESULTS.md  CHANGELOG.md  README.md  WARP.md  claude-mcp-config.json  debug_dash.py  enhanced_dash_server.py  pyproject.toml  requirements.txt  setup-dash-mcp.sh  setup-warp-dash-mcp.sh  start-dash-mcp-tmux.sh  start-dash-mcp.sh  test-automation-environments.sh  test-ci-automation.sh  test-final-validation.sh  warp-mcp-config.json  warp-zshrc-additions.sh
.github/workflows/: release.yml  update-changelog.yml
.prompts/: README.md  context_priming.md
AI_Docs/: README.md
Specs/: README.md
configs/: claude-mcp-config.json  warp-mcp-config.json
docs/: automation-detection.md  changelog_and_ci.md  help.md  server_usage.md  warp-dash-mcp-workflow.md
scripts/: setup-dash-mcp.sh  setup-warp-dash-mcp.sh  test-pip-install.sh
tests/: conftest.py  test_cancel_task.py  test_changelog_history.py  test_changelog_links.py  test_changelog_order.py  test_claude_config.py  test_docsets_env.py  test_help_doc.py  test_keyboard_interrupt.py  test_logging.py  test_main_usage.py  test_nested_docsets.py  test_project_context_types.py  test_readme_paths.py  test_search_limit.py  test_setup_scripts.py  test_symlink_docsets.py  test_version.py
